# SCPicker

./: .gitignore  CMakeLists.txt  Makefile  README.md  shell.nix
include/: constants.hpp  controller.hpp  engine.hpp  events.hpp  gamedata.hpp  viewer.hpp
include/entity/: entity.hpp  orb.hpp  player.hpp  scp_939.hpp
resources/maps/: original_game_map.scpac  test_map.scpac
src/: controller.cpp  engine.cpp  gamedata.cpp  main.cpp  viewer.cpp
src/entity/: entity.cpp  orb.cpp  player.cpp  scp_939.cpp
